fixed white space below footer

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 h2 {
     font-size: 1.5rem;
     font-weight: 400;
@@ -28,12 +32,13 @@ body {
     font-family: "Arial", sans-serif;
     background: white;
     overflow-x: hidden;
+    height: 100vh;
 }
 
 /* header selectors */
 
 header {
-    background: rgb(165, 165, 165);
+    background: black;
     padding: 10px 0;
     border-bottom: 1px solid #ddd;
     display: flex;
@@ -45,7 +50,7 @@ header {
 header h1 {
     font-size: 30px;
     font-weight: bold;
-    color: #333;
+    color: white;
     margin-left: 20px;
     text-align: center;
 }
@@ -73,7 +78,7 @@ header nav ul li {
 
 header nav ul li a {
     text-decoration: none;
-    color: #333;
+    color: white;
     font-size: 15px;
     padding: 10px;
 }
@@ -89,6 +94,7 @@ header nav ul li a {
     background-position: center;
     background-color: black;
 }
+
 
 /* section styling */
 
@@ -194,7 +200,7 @@ header nav ul li a {
 /* footer styling */
 
 footer {
-    background-color: rgb(165, 165, 165);
+    background-color: black;
     padding: 10px 0;
     border-top: 1px solid black#ddd;
     height: 100px;
@@ -204,7 +210,7 @@ footer {
 footer p {
     text-align: center;
     font-size: 15px;
-    color: #333;
+    color: white;
 }
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
